<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_styled"><b>Word</b>Guess</string>
    <string name="app_name">WordGuess</string>
    <string name="create">Create Room</string>
    <string name="game_over">Here are your results:</string>
    <string name="guess">Guess the Word</string>
    <string name="how_to_play">How to Play</string>
    <string name="insider">You are the Insider! The secret word is:</string>
    <string name="join">Join Room</string>
    <string name="nickname">Nickname</string>
    <string name="player_prefix">Player %1$s</string>
    <string name="rank">Rank:</string>
    <string name="ready">Ready</string>
    <string name="room_code">Room Code:</string>
    <string name="rounds"># of Rounds</string>
    <string name="score">Score:</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="you_format">%1$s (You)</string>
    <string name="retry">Retry</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="loading_message">For the best gameplay experience, please make sure you have a stable Internet connection.</string>
    <string name="waiting">Waiting…</string>
    <string name="toast_room_null">Room does not exist.</string>
    <string name="toast_room_expired">Room has expired.</string>
    <string name="toast_room_closed">Room is closed.</string>
    <string name="toast_room_full">Room is full.</string>
    <string name="toast_not_authenticated">Not authenticated.</string>
    <string name="not_ready">Not Ready</string>
    <string name="message_round" tools:ignore="PluralsCandidate">Round %1$d of %2$d has started.</string>
    <string name="title_round">Round %1$d of %2$d</string>
    <string name="toast_removed">Left room or was removed.</string>
    <string name="rank_format">#%1$d</string>
    <string name="message"><![CDATA[<b>%1$s:</b> %2$s]]></string>
    <string name="toast_resigned">Resigned or room expired.</string>
    <string name="give_a_hint">Give a Hint</string>
    <string name="guess_the_word">Guess the Word</string>
    <string name="message_resigned">%1$s resigned.</string>
    <string name="message_insider">%1$s is now the Insider.</string>
    <string name="you">You</string>
    <string name="message_game_over_resigned">Game over due to %1$s resigning.</string>
    <string name="loading">Loading…</string>
    <string name="delimiter">,\u0020</string>
    <string name="summary" tools:ignore="PluralsCandidate">%1$s scored %2$d point(s) in WordGuess and was ranked #%3$d against the following competitors: %4$s</string>
    <string name="share">Share</string>
    <string name="remove">Remove</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="skip">Skip Insider Turn</string>
    <string name="resign">Resign</string>
    <string name="cancel">Cancel</string>
    <string name="join_short">Join</string>
    <string name="enter_room_code">Enter Room Code</string>
</resources>
