<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jiunwei.wordguess.ui.HomeActivity">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/chat_margin"
            android:textAlignment="center"
            android:text="@string/loading_message"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/chat_margin"
            android:textAlignment="center"
            android:text="@string/authentication_failed"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Display2"
            android:text="@string/app_name_styled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/how_to_play"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/home_button_margin"
                android:text="@string/how_to_play"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/create"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/home_button_margin"
                android:text="@string/create"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/join"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/home_button_margin"
                android:text="@string/join"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

    </LinearLayout>

</merge>
