<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateActivity">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/chat_margin"
            android:textAlignment="center"
            android:text="@string/loading_message"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_quarter"
                android:layout_marginEnd="@dimen/spacing_quarter"
                android:text="@string/room_code"
                style="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/room_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_half"
            android:layout_marginTop="@dimen/spacing"
            android:orientation="horizontal"
            android:gravity="center">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/spacing"
                android:layout_marginEnd="@dimen/spacing"
                android:hint="@string/nickname"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="16"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorAccent"/>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/rounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rounds"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorAccent" />

        </LinearLayout>

        <fragment
            android:id="@+id/player_fragment"
            android:name="com.example.jiunwei.wordguess.ui.PlayersFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout="@layout/fragment_players" />

    </LinearLayout>

</merge>
