<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/player_fragment"
        android:name="com.example.jiunwei.wordguess.ui.PlayersFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/spacing_half"
        android:layout_marginLeft="@dimen/spacing"
        android:layout_marginRight="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing_half"
        tools:layout="@layout/fragment_players" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_quarter"
            android:layout_marginEnd="@dimen/spacing_quarter"
            android:text="@string/score" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginRight="@dimen/spacing_quarter"
            android:layout_marginEnd="@dimen/spacing_quarter"
            android:text="@string/rank" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/panel_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expand_collapse"
            android:src="@drawable/ic_expand_more_black_24dp"/>

    </LinearLayout>

</LinearLayout>
