<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/spacing_half"
        style="@style/TextAppearance.AppCompat.Large"
        android:text="@string/app_name_styled"
        android:textColor="@android:color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/create" />

            <Button
                android:id="@+id/join"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/join" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_disabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/create"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/join"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/messages"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>