<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ChatActivity">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/chat_margin"
            android:textAlignment="center"
            android:text="@string/loading_message"/>

    </LinearLayout>

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/panel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        app:umanoPanelHeight="@dimen/toolbar_height"
        app:umanoShadowHeight="@dimen/panel_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/insider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/item_chat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing"
                android:layout_marginRight="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                android:orientation="horizontal"
                android:gravity="center">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/spacing"
                    android:layout_marginEnd="@dimen/spacing"
                    android:hint="@string/guess"
                    android:inputType="text"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorAccent"/>

                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/send"
                    style="@style/Widget.AppCompat.Button.Colored" />

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/scores" />

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</LinearLayout>